# ai-toolkit

./: flux_train_ui.py  pyproject.toml
config/examples/: train_lora_flux_24gb.yaml
