[project]
name = "ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "albumentations>=1.4.15",
    "bitsandbytes>=0.43.3",
    "controlnet-aux==0.0.7",
    "diffusers",
    "einops>=0.8.0",
    "flatten-json>=0.1.14",
    "gradio>=4.44.0",
    "hf-transfer>=0.1.8",
    "huggingface-hub>=0.24.7",
    "invisible-watermark>=0.2.0",
    "k-diffusion>=0.1.1.post1",
    "kornia>=0.7.3",
    "lpips>=0.1.4",
    "lycoris-lora==1.8.3",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.26.1",
    "optimum-quanto>=0.2.4",
    "oyaml>=1.0",
    "peft>=0.12.0",
    "prodigyopt>=1.0",
    "pydantic>=2.9.1",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "pytorch-fid>=0.3.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.4.5",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.17.1",
    "timm>=1.0.9",
    "toml>=0.10.2",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
